--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
